# Corporate_QA_Bot

./: Bot_chat_history.py  README.md  main.py  pyproject.toml  requirements.txt
